# flask-sketch

./: .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  settings.toml  setup.py
flask_sketch/: __init__.py  __main__.py  config.py  const.py  helpers.py  make.py  make_boilerplate.py  questions.py  sketch.py  utils.py
flask_sketch/const/: requirements.py
flask_sketch/handlers/: __init__.py  api_auth_handler.py  api_framework_handler.py  app_type_handler.py  auth_handler.py  commands_handler.py  config_handler.py  database_handler.py  features_handler.py  models_handler.py
flask_sketch/questions/: __init__.py  api_framework.py  auth_framework.py  commom.py  config.py  const.py  features.py
flask_sketch/templates/: .gitignore_tpl  __init__.py  dynaconf_secrets_tpl  dynaconf_settings_tpl  wsgi_tpl
flask_sketch/templates/api/: __init__.py  api_init_jwt_extended_security_tpl  api_init_jwt_extended_tpl  api_init_noauth_tpl  api_init_restx_jwtext_tpl  api_init_restx_noauth_tpl
flask_sketch/templates/app/: app_dynaconf_conf_tpl  app_none_conf_framework_tpl  app_web_only_dynaconf_tpl
flask_sketch/templates/commands/: default_tpl  mongo_default_tpl  mongo_noauth_tpl  mongo_security_tpl  no_auth_tpl  sql_default_tpl  sql_noauth_tpl
flask_sketch/templates/config/: config_dynaconf_tpl  config_from_class_tpl  config_none_tpl
flask_sketch/templates/examples/: examples_caching_tpl  examples_init_auth_tpl  examples_init_caching_tpl  examples_init_limiter_tpl  examples_init_tpl  examples_limiter_tpl  examples_login_auth_tpl  examples_security_auth_tpl
flask_sketch/templates/ext/: actuator_tpl  auth_praetorian_tpl  caching_tpl  database_sqlalchemy_tpl.py  ext_api_auth_jwt_extended_tpl  ext_api_smorest_tpl  ext_auth_security_mongo_tpl  ext_caching_tpl  ext_cors_tpl  ext_debugtoolbar_tpl  ext_limiter_tpl  ext_login_tpl  ext_migrate_tpl  ext_mongoengine_tpl  limiter_tpl  migrate_tpl
flask_sketch/templates/models/: __init__.py  models_init_tpl  models_login_tpl  models_security_tpl  models_utils_tpl  user_mongo_noauth_jwt_tpl  user_mongo_security_tpl  user_mongo_tpl  user_praetorian_tpl.py  (+4 more)
tests/: __init__.py
(+49 files in other folders)
