[tool.poetry]
name = "flask-sketch"
version = "0.3.28"
description = "A CLI for autogenerate folder structure and boilerplate for Flask applications"
authors = ["Eric Souza <ericsouza0801@gmail.com>"]
license = "MIT License"

readme = "README.md"

repository = "https://github.com/ericsouza/flask-sketch"

keywords = ["flask-sketch", "flask_sketch", "flask boilerplate"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pyfiglet = "^0.8.post1"
pyinquirer = "^1.0.3"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^5.5.2"

[tool.poetry.scripts]
flask-sketch = "flask_sketch.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
